2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Centralize tests; do complicated test last.

	* t999.test: Rename from ../src/alive.test; use ./common for init;
	change to t999.d/ before starting; combine stdout/stderr; inhibit
	cleanup if env var ‘KEEPD’ has value ‘1’.
	* Makefile.am (TESTS): Add t999.test.

2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Fix bug: Specify "./common" to avoid ‘PATH’ search.

	* alive.test: Say ". ./common".
	* t000.test: Likewise.
	* t001.test: Likewise.
	Reported by Ludovic Courtès.

2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.93

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.

	* Makefile.am: Update license notice.
	* common.in: Likewise.

2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Fix bug: Do a ‘co -l’ before modifying the working file.

	Improper methodology introduced 2010-03-10,
	"Fix bug: Remove all log messages when removing all revisions".
	* t000.test: Do ‘co -l’ before composing the first revision.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Output proper range for ‘RM_STDIO’ fro.

	Regression introduced 2010-04-27, "Add abstraction: fro_spew_partial".
	* t001.test: Add a test to check proper rlog(1) output,
	given an RCS file bloated into into ‘RM_STDIO’ territory.

2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Resolve ‘BRNUM.’ correctly.

	Regression introduced 2010-04-21, "Add abstraction: fully_numeric".
	* t001.test: Add a test to compare the output of "co -pX",
	where X is ‘BRNUM’ in one case and ‘BRNUM.’ in another.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix bug: Correctly erase/append access-list entries.

	Regression introduced 2010-04-28,
	"Use ‘struct link’ instead of ‘struct access’".
	* t001.test: Add some access-list modification tests.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix bug: Correctly delete symbolic name.

	Regression introduced 2010-04-28,